source code and program/minic.output
Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 Specifier: TYPE

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 VarDec: ID

   11 FuncDec: ID LP VarList RP
   12        | ID LP RP

   13 VarList: ParamDec
   14        | ParamDec COMMA VarList

   15 ParamDec: Specifier VarDec

   16 CompSt: LC DefList StmList RC

   17 StmList: %empty
   18        | Stmt StmList

   19 Stmt: Exp SEMI
   20     | CompSt
   21     | RETURN Exp SEMI
   22     | IF LP Exp RP Stmt
   23     | IF LP Exp RP Stmt ELSE Stmt
   24     | WHILE LP Exp RP Stmt

   25 DefList: %empty
   26        | Def DefList

   27 Def: Specifier DecList SEMI

   28 DecList: Dec
   29        | Dec COMMA DecList

   30 Dec: VarDec
   31    | VarDec ASSIGNOP Exp

   32 Exp: Exp ASSIGNOP Exp
   33    | Exp AND Exp
   34    | Exp OR Exp
   35    | Exp RELOP Exp
   36    | Exp PLUS Exp
   37    | Exp MINUS Exp
   38    | Exp STAR Exp
   39    | Exp DIV Exp
   40    | LP Exp RP
   41    | MINUS Exp
   42    | NOT Exp
   43    | ID LP Args RP
   44    | ID LP RP
   45    | ID
   46    | INT
   47    | CHAR
   48    | FLOAT

   49 Args: Exp COMMA Args
   50     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 6
INT (258) 46
CHAR (259) 47
ID (260) 10 11 12 43 44 45
RELOP (261) 35
TYPE (262) 7
FLOAT (263) 48
LP (264) 11 12 22 23 24 40 43 44
RP (265) 11 12 22 23 24 40 43 44
LC (266) 16
RC (267) 16
SEMI (268) 4 6 19 21 27
COMMA (269) 9 14 29 49
PLUS (270) 36
MINUS (271) 37 41
STAR (272) 38
DIV (273) 39
ASSIGNOP (274) 31 32
AND (275) 33
OR (276) 34
NOT (277) 42
IF (278) 22 23
ELSE (279) 23
WHILE (280) 24
RETURN (281) 21
UMINUS (282)
LOWER_THEN_ELSE (283)


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
program (30)
    on left: 1, on right: 0
ExtDefList (31)
    on left: 2 3, on right: 1 3
ExtDef (32)
    on left: 4 5 6, on right: 3
Specifier (33)
    on left: 7, on right: 4 5 15 27
ExtDecList (34)
    on left: 8 9, on right: 4 9
VarDec (35)
    on left: 10, on right: 8 9 15 30 31
FuncDec (36)
    on left: 11 12, on right: 5
VarList (37)
    on left: 13 14, on right: 11 14
ParamDec (38)
    on left: 15, on right: 13 14
CompSt (39)
    on left: 16, on right: 5 20
StmList (40)
    on left: 17 18, on right: 16 18
Stmt (41)
    on left: 19 20 21 22 23 24, on right: 18 22 23 24
DefList (42)
    on left: 25 26, on right: 16 26
Def (43)
    on left: 27, on right: 26
DecList (44)
    on left: 28 29, on right: 27 29
Dec (45)
    on left: 30 31, on right: 28 29
Exp (46)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48, on right:
    19 21 22 23 24 31 32 33 34 35 36 37 38 39 40 41 42 49 50
Args (47)
    on left: 49 50, on right: 43 49


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 3
    ExtDefList  go to state 4
    ExtDef      go to state 5
    Specifier   go to state 6


State 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 7


State 2

    7 Specifier: TYPE .

    $default  reduce using rule 7 (Specifier)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


State 5

    3 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 9
    ExtDef      go to state 5
    Specifier   go to state 6


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 10

    ExtDecList  go to state 11
    VarDec      go to state 12
    FuncDec     go to state 13


State 7

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 10

   10 VarDec: ID .
   11 FuncDec: ID . LP VarList RP
   12        | ID . LP RP

    LP  shift, and go to state 14

    $default  reduce using rule 10 (VarDec)


State 11

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 15


State 12

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList

    COMMA  shift, and go to state 16

    $default  reduce using rule 8 (ExtDecList)


State 13

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 17

    CompSt  go to state 18


State 14

   11 FuncDec: ID LP . VarList RP
   12        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 19

    Specifier  go to state 20
    VarList    go to state 21
    ParamDec   go to state 22


State 15

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 16

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 23

    ExtDecList  go to state 24
    VarDec      go to state 12


State 17

   16 CompSt: LC . DefList StmList RC

    TYPE  shift, and go to state 2

    $default  reduce using rule 25 (DefList)

    Specifier  go to state 25
    DefList    go to state 26
    Def        go to state 27


State 18

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


State 19

   12 FuncDec: ID LP RP .

    $default  reduce using rule 12 (FuncDec)


State 20

   15 ParamDec: Specifier . VarDec

    ID  shift, and go to state 23

    VarDec  go to state 28


State 21

   11 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 29


State 22

   13 VarList: ParamDec .
   14        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 30

    $default  reduce using rule 13 (VarList)


State 23

   10 VarDec: ID .

    $default  reduce using rule 10 (VarDec)


State 24

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 25

   27 Def: Specifier . DecList SEMI

    ID  shift, and go to state 23

    VarDec   go to state 31
    DecList  go to state 32
    Dec      go to state 33


State 26

   16 CompSt: LC DefList . StmList RC

    INT     shift, and go to state 34
    CHAR    shift, and go to state 35
    ID      shift, and go to state 36
    FLOAT   shift, and go to state 37
    LP      shift, and go to state 38
    LC      shift, and go to state 17
    MINUS   shift, and go to state 39
    NOT     shift, and go to state 40
    IF      shift, and go to state 41
    WHILE   shift, and go to state 42
    RETURN  shift, and go to state 43

    $default  reduce using rule 17 (StmList)

    CompSt   go to state 44
    StmList  go to state 45
    Stmt     go to state 46
    Exp      go to state 47


State 27

   26 DefList: Def . DefList

    TYPE  shift, and go to state 2

    $default  reduce using rule 25 (DefList)

    Specifier  go to state 25
    DefList    go to state 48
    Def        go to state 27


State 28

   15 ParamDec: Specifier VarDec .

    $default  reduce using rule 15 (ParamDec)


State 29

   11 FuncDec: ID LP VarList RP .

    $default  reduce using rule 11 (FuncDec)


State 30

   14 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 20
    VarList    go to state 49
    ParamDec   go to state 22


State 31

   30 Dec: VarDec .
   31    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 50

    $default  reduce using rule 30 (Dec)


State 32

   27 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 51


State 33

   28 DecList: Dec .
   29        | Dec . COMMA DecList

    COMMA  shift, and go to state 52

    $default  reduce using rule 28 (DecList)


State 34

   46 Exp: INT .

    $default  reduce using rule 46 (Exp)


State 35

   47 Exp: CHAR .

    $default  reduce using rule 47 (Exp)


State 36

   43 Exp: ID . LP Args RP
   44    | ID . LP RP
   45    | ID .

    LP  shift, and go to state 53

    $default  reduce using rule 45 (Exp)


State 37

   48 Exp: FLOAT .

    $default  reduce using rule 48 (Exp)


State 38

   40 Exp: LP . Exp RP

    INT    shift, and go to state 34
    CHAR   shift, and go to state 35
    ID     shift, and go to state 36
    FLOAT  shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 54


State 39

   41 Exp: MINUS . Exp

    INT    shift, and go to state 34
    CHAR   shift, and go to state 35
    ID     shift, and go to state 36
    FLOAT  shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 55


State 40

   42 Exp: NOT . Exp

    INT    shift, and go to state 34
    CHAR   shift, and go to state 35
    ID     shift, and go to state 36
    FLOAT  shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 56


State 41

   22 Stmt: IF . LP Exp RP Stmt
   23     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 57


State 42

   24 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 58


State 43

   21 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 34
    CHAR   shift, and go to state 35
    ID     shift, and go to state 36
    FLOAT  shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 59


State 44

   20 Stmt: CompSt .

    $default  reduce using rule 20 (Stmt)


State 45

   16 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 60


State 46

   18 StmList: Stmt . StmList

    INT     shift, and go to state 34
    CHAR    shift, and go to state 35
    ID      shift, and go to state 36
    FLOAT   shift, and go to state 37
    LP      shift, and go to state 38
    LC      shift, and go to state 17
    MINUS   shift, and go to state 39
    NOT     shift, and go to state 40
    IF      shift, and go to state 41
    WHILE   shift, and go to state 42
    RETURN  shift, and go to state 43

    $default  reduce using rule 17 (StmList)

    CompSt   go to state 44
    StmList  go to state 61
    Stmt     go to state 46
    Exp      go to state 47


State 47

   19 Stmt: Exp . SEMI
   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp

    RELOP     shift, and go to state 62
    SEMI      shift, and go to state 63
    PLUS      shift, and go to state 64
    MINUS     shift, and go to state 65
    STAR      shift, and go to state 66
    DIV       shift, and go to state 67
    ASSIGNOP  shift, and go to state 68
    AND       shift, and go to state 69
    OR        shift, and go to state 70


State 48

   26 DefList: Def DefList .

    $default  reduce using rule 26 (DefList)


State 49

   14 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 14 (VarList)


State 50

   31 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 34
    CHAR   shift, and go to state 35
    ID     shift, and go to state 36
    FLOAT  shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 71


State 51

   27 Def: Specifier DecList SEMI .

    $default  reduce using rule 27 (Def)


State 52

   29 DecList: Dec COMMA . DecList

    ID  shift, and go to state 23

    VarDec   go to state 31
    DecList  go to state 72
    Dec      go to state 33


State 53

   43 Exp: ID LP . Args RP
   44    | ID LP . RP

    INT    shift, and go to state 34
    CHAR   shift, and go to state 35
    ID     shift, and go to state 36
    FLOAT  shift, and go to state 37
    LP     shift, and go to state 38
    RP     shift, and go to state 73
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp   go to state 74
    Args  go to state 75


State 54

   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp
   40    | LP Exp . RP

    RELOP     shift, and go to state 62
    RP        shift, and go to state 76
    PLUS      shift, and go to state 64
    MINUS     shift, and go to state 65
    STAR      shift, and go to state 66
    DIV       shift, and go to state 67
    ASSIGNOP  shift, and go to state 68
    AND       shift, and go to state 69
    OR        shift, and go to state 70


State 55

   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp
   41    | MINUS Exp .

    $default  reduce using rule 41 (Exp)


State 56

   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp
   42    | NOT Exp .

    $default  reduce using rule 42 (Exp)


State 57

   22 Stmt: IF LP . Exp RP Stmt
   23     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 34
    CHAR   shift, and go to state 35
    ID     shift, and go to state 36
    FLOAT  shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 77


State 58

   24 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 34
    CHAR   shift, and go to state 35
    ID     shift, and go to state 36
    FLOAT  shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 78


State 59

   21 Stmt: RETURN Exp . SEMI
   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp

    RELOP     shift, and go to state 62
    SEMI      shift, and go to state 79
    PLUS      shift, and go to state 64
    MINUS     shift, and go to state 65
    STAR      shift, and go to state 66
    DIV       shift, and go to state 67
    ASSIGNOP  shift, and go to state 68
    AND       shift, and go to state 69
    OR        shift, and go to state 70


State 60

   16 CompSt: LC DefList StmList RC .

    $default  reduce using rule 16 (CompSt)


State 61

   18 StmList: Stmt StmList .

    $default  reduce using rule 18 (StmList)


State 62

   35 Exp: Exp RELOP . Exp

    INT    shift, and go to state 34
    CHAR   shift, and go to state 35
    ID     shift, and go to state 36
    FLOAT  shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 80


State 63

   19 Stmt: Exp SEMI .

    $default  reduce using rule 19 (Stmt)


State 64

   36 Exp: Exp PLUS . Exp

    INT    shift, and go to state 34
    CHAR   shift, and go to state 35
    ID     shift, and go to state 36
    FLOAT  shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 81


State 65

   37 Exp: Exp MINUS . Exp

    INT    shift, and go to state 34
    CHAR   shift, and go to state 35
    ID     shift, and go to state 36
    FLOAT  shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 82


State 66

   38 Exp: Exp STAR . Exp

    INT    shift, and go to state 34
    CHAR   shift, and go to state 35
    ID     shift, and go to state 36
    FLOAT  shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 83


State 67

   39 Exp: Exp DIV . Exp

    INT    shift, and go to state 34
    CHAR   shift, and go to state 35
    ID     shift, and go to state 36
    FLOAT  shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 84


State 68

   32 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 34
    CHAR   shift, and go to state 35
    ID     shift, and go to state 36
    FLOAT  shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 85


State 69

   33 Exp: Exp AND . Exp

    INT    shift, and go to state 34
    CHAR   shift, and go to state 35
    ID     shift, and go to state 36
    FLOAT  shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 86


State 70

   34 Exp: Exp OR . Exp

    INT    shift, and go to state 34
    CHAR   shift, and go to state 35
    ID     shift, and go to state 36
    FLOAT  shift, and go to state 37
    LP     shift, and go to state 38
    MINUS  shift, and go to state 39
    NOT    shift, and go to state 40

    Exp  go to state 87


State 71

   31 Dec: VarDec ASSIGNOP Exp .
   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp

    RELOP     shift, and go to state 62
    PLUS      shift, and go to state 64
    MINUS     shift, and go to state 65
    STAR      shift, and go to state 66
    DIV       shift, and go to state 67
    ASSIGNOP  shift, and go to state 68
    AND       shift, and go to state 69
    OR        shift, and go to state 70

    $default  reduce using rule 31 (Dec)


State 72

   29 DecList: Dec COMMA DecList .

    $default  reduce using rule 29 (DecList)


State 73

   44 Exp: ID LP RP .

    $default  reduce using rule 44 (Exp)


State 74

   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp
   49 Args: Exp . COMMA Args
   50     | Exp .

    RELOP     shift, and go to state 62
    COMMA     shift, and go to state 88
    PLUS      shift, and go to state 64
    MINUS     shift, and go to state 65
    STAR      shift, and go to state 66
    DIV       shift, and go to state 67
    ASSIGNOP  shift, and go to state 68
    AND       shift, and go to state 69
    OR        shift, and go to state 70

    $default  reduce using rule 50 (Args)


State 75

   43 Exp: ID LP Args . RP

    RP  shift, and go to state 89


State 76

   40 Exp: LP Exp RP .

    $default  reduce using rule 40 (Exp)


State 77

   22 Stmt: IF LP Exp . RP Stmt
   23     | IF LP Exp . RP Stmt ELSE Stmt
   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp

    RELOP     shift, and go to state 62
    RP        shift, and go to state 90
    PLUS      shift, and go to state 64
    MINUS     shift, and go to state 65
    STAR      shift, and go to state 66
    DIV       shift, and go to state 67
    ASSIGNOP  shift, and go to state 68
    AND       shift, and go to state 69
    OR        shift, and go to state 70


State 78

   24 Stmt: WHILE LP Exp . RP Stmt
   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp

    RELOP     shift, and go to state 62
    RP        shift, and go to state 91
    PLUS      shift, and go to state 64
    MINUS     shift, and go to state 65
    STAR      shift, and go to state 66
    DIV       shift, and go to state 67
    ASSIGNOP  shift, and go to state 68
    AND       shift, and go to state 69
    OR        shift, and go to state 70


State 79

   21 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 21 (Stmt)


State 80

   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   35    | Exp RELOP Exp .
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp

    PLUS   shift, and go to state 64
    MINUS  shift, and go to state 65
    STAR   shift, and go to state 66
    DIV    shift, and go to state 67

    $default  reduce using rule 35 (Exp)


State 81

   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   36    | Exp PLUS Exp .
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp

    STAR  shift, and go to state 66
    DIV   shift, and go to state 67

    $default  reduce using rule 36 (Exp)


State 82

   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   37    | Exp MINUS Exp .
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp

    STAR  shift, and go to state 66
    DIV   shift, and go to state 67

    $default  reduce using rule 37 (Exp)


State 83

   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   38    | Exp STAR Exp .
   39    | Exp . DIV Exp

    $default  reduce using rule 38 (Exp)


State 84

   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp
   39    | Exp DIV Exp .

    $default  reduce using rule 39 (Exp)


State 85

   32 Exp: Exp . ASSIGNOP Exp
   32    | Exp ASSIGNOP Exp .
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp
